// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse @attribute before fn 1`] = `
[
  {
    "calls": [],
    "end": 31,
    "kind": "fn",
    "name": "main",
    "start": 5,
    "typeRefs": [],
  },
]
`;

exports[`parse @compute @workgroup_size(a, b, 1) before fn 1`] = `
[
  {
    "calls": [],
    "end": 61,
    "kind": "fn",
    "name": "main",
    "start": 5,
    "typeRefs": [],
  },
]
`;

exports[`parse alias 1`] = `[]`;

exports[`parse and ignore const_assert 1`] = `
[
  {
    "calls": [],
    "end": 42,
    "kind": "fn",
    "name": "main",
    "start": 30,
    "typeRefs": [],
  },
]
`;

exports[`parse and ignore global diagnostic 1`] = `
[
  {
    "calls": [],
    "end": 61,
    "kind": "fn",
    "name": "main",
    "start": 49,
    "typeRefs": [],
  },
]
`;

exports[`parse empty string 1`] = `[]`;

exports[`parse fn foo() { } 1`] = `
[
  {
    "calls": [],
    "end": 12,
    "kind": "fn",
    "name": "foo",
    "start": 0,
    "typeRefs": [],
  },
]
`;

exports[`parse fn with calls 1`] = `
[
  {
    "calls": [
      {
        "end": 14,
        "kind": "call",
        "name": "foo",
        "start": 11,
      },
      {
        "end": 21,
        "kind": "call",
        "name": "bar",
        "start": 18,
      },
    ],
    "end": 26,
    "kind": "fn",
    "name": "foo",
    "start": 0,
    "typeRefs": [],
  },
]
`;

exports[`parse root level ;; 1`] = `[]`;

exports[`parse top level override and const 1`] = `
[
  {
    "end": 21,
    "kind": "var",
    "name": "x",
    "start": 5,
    "typeRefs": [],
  },
  {
    "end": 38,
    "kind": "var",
    "name": "y",
    "start": 26,
    "typeRefs": [],
  },
  {
    "calls": [],
    "end": 56,
    "kind": "fn",
    "name": "main",
    "start": 44,
    "typeRefs": [],
  },
]
`;

exports[`parse top level var 1`] = `
[
  {
    "end": 52,
    "kind": "var",
    "name": "u",
    "start": 5,
    "typeRefs": [
      {
        "end": 51,
        "kind": "typeRef",
        "name": "Uniforms",
        "start": 43,
      },
    ],
  },
  {
    "calls": [],
    "end": 76,
    "kind": "fn",
    "name": "main",
    "start": 64,
    "typeRefs": [],
  },
]
`;

exports[`wordNumArgs parses (a, b, 1) 1`] = `
[
  "a",
  "b",
  "1",
]
`;
